tests/e2e/semantics/nested_types5.story
function foo returns {int:int[]}
	return {20: ["foo", "bar"]}

a = foo()
